Fix touch event issue on mobile to prevent scrolling conflicts

--- a/frontend/src/css/Collection_ID.css
+++ b/frontend/src/css/Collection_ID.css
@@ -9,8 +9,9 @@
 
 h1 {
   font-size: 24px;
-  margin: 0;
+  margin: 10;
   text-align: center;
+  padding: 20px;
 }
 
 
@@ -25,7 +26,7 @@ p {
 .product-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* Garante ajuste responsivo */
-  gap: 20px;
+  gap: 50px;
   padding: 40px 0;
   justify-items: center;
   max-width: 1200px;
